# image-to-table

./: .gitignore  .pre-commit-config.yaml  README.md  base64_encode.py  base64_string.txt  image_with_word_boxes.py  models.py  pyproject.toml  run.py  server-request.txt
.github/workflows/: pythonapp.yml
image_to_table/: image_with_word_boxes.py  models.py  number_of_columns.py
image_to_table/extractor/: __init__.py  image_with_word_boxes.py  main.py  number_of_columns.py
image_to_table/server/: run.py
image_to_table/server/app/: __init__.py  error_handling.py  exceptions.py  routes.py
tests/tests_integration/: conftest.py
tests/tests_integration/test_server/: test_error_handling.py  test_routes.py
