[tool.poetry]
name = "image-to-table"
version = "0.1.0"
description = ""
authors = ["Vegard Stikbakke <vegard.stikbakke@gmail.com>"]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # isort all Python files
known_third_parties = []

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
ipython = "^7.8"
isort = "^4.3"
seed-isort-config = "^1.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
